<resources>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="first_onboarding_title">Organize Your Messages Effortlessly</string>
    <string name="first_onboarding_msg">Messages are auto-sorted into Personal, OTP,\nTransactions, and Offers for easy access.</string>
    <string name="second_onboarding_title">Keep Your Chats Secure</string>
    <string name="second_onboarding_msg">Use Chat Lock to protect private conversations and\nkeep them safe. </string>
    <string name="third_onboarding_title">Customize Your Chat Experience</string>
    <string name="third_onboarding_msg">Personalize chats with colors, wallpapers, and\nadjustable fonts.</string>
    <string name="set_as_default_title">Set Messages as Default</string>
    <string name="set_as_default_msg">Enable Messages as your default app to send and\nreceive texts.</string>
    <string name="set_as_default_btn_text">Set as Default</string>
    <string name="notification_per_title">Notification Permission</string>
    <string name="notification_per_msg">Stay Updated! Enable notifications to receive messages\nwithout missing anything.</string>
    <string name="notification_per_btn_text">Allow Permission</string>
    <string name="phone_state_per_title">We need some permission!</string>
    <string name="phone_state_per_msg">Allow permission to send quick replies right after calls\nfor a faster messaging experience.</string>
    <string name="phone_state_per_btn_text">Grant Permission</string>
    <string name="phone_state_per_text">Enable the app to read your phone state</string>
    <string name="phone_state_per_guide">For quick and easy access to messages right after calls.</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="enable_quick_actions_in_3_easy_steps">Enable quick actions in 3 easy steps.</string>
    <string name="tap_the_enable_button_below">Tap the \"Enable\" button below.</string>
    <string name="locate_our_app_in_the_list">Locate our app in the list.</string>
    <string name="turn_on_the_toggle_to_activate">Turn on the toggle to activate.</string>
    <string name="enable">Enable</string>
    <string name="overlay_permission_denied">Overlay Permission Denied!</string>
    <string name="find_and_allow_permission">Find %s and allow permission</string>
    <string name="inbox">Inbox</string>
    <string name="archived">Archived</string>
    <string name="private_chat">Private Chat</string>
    <string name="spam_blocked">Spam &amp; Blocked</string>
    <string name="scheduled">Scheduled</string>
    <string name="theme">Theme</string>
    <string name="backup_restore">Backup &amp; Restore</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="rate_app">Rate App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="all">All</string>
    <string name="personal">Personal</string>
    <string name="otp_s">OTPs</string>
    <string name="transactions">Transactions</string>
    <string name="offers">Offers</string>
    <string name="chat">Chat</string>
    <string name="copy_otp">Copy OTP</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="sender_does_not_support_replies">Sender does not support replies</string>
    <string name="sender_does_not_support_call">Sender does not support call</string>
    <string name="call">Call</string>
    <string name="conversation_details">Conversation Details</string>
    <string name="appearance">Appearance</string>
    <string name="chat_wallpaper">Chat Wallpaper</string>
    <string name="show_subject_field">Show Subject Field</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="view_details">View Details</string>
    <string name="translate_massage">Translate Massage</string>
    <string name="choose_language">Choose Language</string>
    <string name="text_message">Text Message</string>
    <string name="subject">Subject:</string>
    <string name="contact">Contact</string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="files">Files</string>
    <string name="voice">Voice</string>
    <string name="schedule">Schedule</string>
    <string name="location">Location</string>
    <string name="clipboard">Clipboard</string>
    <string name="view_contact_details">View contact details</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="share_via">Share via</string>
    <string name="no_app_found">No valid app found</string>
    <string name="maximum_share_reached">You cannot share this much content at once</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_message">Are you sure you want to delete this\nmessages?</string>
    <string name="something_went_wrong_please_try_after_some_time">Something went wrong, Please try after some time.</string>
    <string name="message_details">Message details</string>
    <string name="ok">OK</string>
    <string name="message_details_received">Type : %1$s\n\nFrom : %2$s\n\nReceived : %3$s</string>
    <string name="message_details_send">Type : %1$s\n\nTo : %2$s\n\nSent : %3$s</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="private_text">Private</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="dial_number">Dial Number</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="want_to_delete_conversation">Are you sure you want to delete this\nconversations?</string>
    <string name="want_to_block_conversation">Are you sure you want to %1$s this\nconversations?</string>
    <string name="search_here">Search here</string>
    <string name="no_items_found">No items found.</string>
    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="default_filter">Default</string>
    <string name="today_filter">Today</string>
    <string name="monthly_filter">Monthly</string>
    <string name="year_filter">Year</string>
    <string name="date_range_filter">Date Range</string>
    <string name="date_show">Date: %1$s</string>
    <string name="select_range">SELECT RANGE</string>
    <string name="range_show">Range: %1$s</string>
    <string name="year_show">Year: %1$d</string>
    <string name="month_show">Month: %1$s</string>
    <string name="language_model_error">Something went wrong, Please try after sometime.</string>
    <string name="language_translate_error">We are currently experiencing issues with text translation. Please try again later.</string>
    <string name="new_chat">New Chat</string>
    <string name="import_messages">Import messages</string>
    <string name="font_size">Font Size</string>
    <string name="preview">Preview</string>
    <string name="chat_color">Chat Color</string>
    <string name="add_photos">Add Photos</string>
    <string name="none">None</string>
    <string name="set_password">Set a Password</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="enter_password">Enter a Password</string>
    <string name="set_pin">Set PIN</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="enter_correct_password">Enter correct Password</string>
    <string name="preview_receive">Hello Guys !</string>
    <string name="preview_send">Yeah… this is my favorite color!</string>
    <string name="confirm_pin_title">Dear users,\nThe PIN of your Private Chat is:</string>
    <string name="confirm_pin_guide">It is recommended that you set up a security question to\nprevent forgetting your password.</string>
    <string name="set_now">Set Now</string>
    <string name="submit">Submit</string>
    <string name="enter_security_answer">Enter Security Answer</string>
    <string name="write_your_answer">Write your answer</string>
    <string name="select_security_question">Select Security Question</string>
    <string name="secret_question">Secret Question</string>
    <string name="forget_password">Forget Password?</string>
    <string name="verify_your_identity">If you forgot the PIN, the security question will be used to verify your identity so that you can reset the password.</string>
    <string name="wrong_qa_answer">You are  selecting or answering wrong question, Please select correct question and provide accurate answer.</string>
    <string name="select_your_security_question">Select your security question</string>
    <string name="teacher_question">Who is your favourite teacher?</string>
    <string name="actor_question">Who is your favourite actor?</string>
    <string name="actress_question">Who is your favourite actress?</string>
    <string name="cricketer_question">Who is your favourite cricketer?</string>
    <string name="footballer_question">Who is your favourite footballer?</string>
    <string name="pet_name_question">What is your pet name?</string>
    <string name="empty_private_chat_title">Empty Private Chat</string>
    <string name="empty_private_chat_sub_title">No chats yet. Start a new one now!</string>
    <string name="change_security">Change Security</string>
    <string name="edit_password">Edit Password</string>
    <string name="private_message_notification">Message Notification</string>
    <string name="private_message_notification_guide">When disabling this option, messages from private contacts will not pop up at notification</string>
    <string name="password_change_successfully">Password change successfully !!</string>
    <string name="choose_app_theme">Choose App Theme</string>
    <string name="choose_theme_to_personalize_your_app">Choose a theme to personalize your app.</string>
    <string name="system_default">System Default</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="normal">Normal</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="use_system_font">Use System Font</string>
    <string name="language">Language</string>
    <string name="lock_screen_notification">Lock Screen Notification</string>
    <string name="sender_and_messages">Sender and messages</string>
    <string name="resize_send_mms_images">Resize Send MMS Images</string>
    <string name="customize_notification">Customize Notification</string>
    <string name="swipe_actions">Swipe Actions</string>
    <string name="configure_swipe_actions_for_conversations">Configure swipe actions for conversations</string>
    <string name="post_call_screen">Post Call Screen</string>
    <string name="show_call_screen_after_call">Show call screen after call</string>
    <string name="delivery_reports">Delivery Reports</string>
    <string name="use_24_hour_time_format">Use 24 Hour Time Format</string>
    <string name="show_character_counter_writing_messages">Show a character counter at writing messages</string>
    <string name="remove_accents_diacritics_sending_messages">Remove Accents &amp; Diacritics at Sending Messages</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
</resources>