<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuCall"
        android:icon="@drawable/ic_call"
        android:title="@string/call"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuCopy"
        android:icon="@drawable/ic_copy_menu"
        android:title="@string/copy"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuDelete"
        android:title="@string/delete"
        android:visible="false"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menuDetails"
        app:showAsAction="never"
        android:title="@string/conversation_details" />

    <item
        android:id="@+id/menuAppearance"
        app:showAsAction="never"
        android:title="@string/appearance" />

    <item
        android:id="@+id/menuChatWallpaper"
        app:showAsAction="never"
        android:title="@string/chat_wallpaper" />

    <item
        android:id="@+id/menuSubjectField"
        app:showAsAction="never"
        android:title="@string/show_subject_field" />


    <item
        android:id="@+id/menuShare"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/share" />

    <item
        android:id="@+id/menuForward"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/forward" />

    <item
        android:id="@+id/menuViewDetails"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/view_details" />

</menu>