<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:fitsSystemWindows="true"
    tools:context=".ui.setting.ui.SettingActivity">

    <com.messages.common.custom_views.AppToolbar
        android:id="@+id/settingToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/toolbar_bg"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppToolbarStyle" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bottom_sheet_bg"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="@dimen/_5sdp">

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingFontSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="?android:selectableItemBackground"
                app:iconSrc="@drawable/ic_font_size"
                app:layout_constraintTop_toTopOf="parent"
                app:showSwitch="false"
                app:subtitleText="@string/app_name"
                app:titleText="@string/font_size" />

            <View
                android:id="@+id/viewFontSize"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingFontSize" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingUseSystemFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                app:iconSrc="@drawable/ic_system_font"
                app:layout_constraintTop_toBottomOf="@id/viewFontSize"
                app:showSwitch="true"
                app:titleText="@string/use_system_font" />

            <View
                android:id="@+id/viewUseSystemFont"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingUseSystemFont" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_translate_icon"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewUseSystemFont"
                app:showSwitch="false"
                app:subtitleText="English"
                app:titleText="@string/language" />

            <View
                android:id="@+id/viewLanguage"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingLanguage" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingLockScreenNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_lock_screen_notify"
                app:layout_constraintTop_toBottomOf="@id/viewLanguage"
                app:showSwitch="false"
                android:background="?android:selectableItemBackground"
                app:subtitleText="@string/sender_and_messages"
                app:titleText="@string/lock_screen_notification" />

            <View
                android:id="@+id/viewLockScreenNotify"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingLockScreenNotify" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_appearance"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewLockScreenNotify"
                app:showSwitch="false"
                app:titleText="@string/appearance" />

            <View
                android:id="@+id/viewAppearance"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingAppearance" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingChatWallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_chat_wallpaper"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewAppearance"
                app:showSwitch="false"
                app:titleText="@string/chat_wallpaper" />

            <View
                android:id="@+id/viewChatWallpaper"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingChatWallpaper" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingResizeSendMMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_resize"
                app:layout_constraintTop_toBottomOf="@id/viewChatWallpaper"
                android:background="?android:selectableItemBackground"
                app:showSwitch="false"
                app:subtitleText="@string/app_name"
                app:titleText="@string/resize_send_mms_images" />

            <View
                android:id="@+id/viewResizeSendMMS"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingResizeSendMMS" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingCustomizeNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_notifications"
                app:layout_constraintTop_toBottomOf="@id/viewResizeSendMMS"
                android:background="?android:selectableItemBackground"
                app:showSwitch="false"
                app:titleText="@string/customize_notification" />

            <View
                android:id="@+id/viewCustomizeNotify"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingCustomizeNotify" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingSwipeAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_swipe"
                app:layout_constraintTop_toBottomOf="@id/viewCustomizeNotify"
                android:background="?android:selectableItemBackground"
                app:showSwitch="false"
                app:subtitleText="@string/configure_swipe_actions_for_conversations"
                app:titleText="@string/swipe_actions" />

            <View
                android:id="@+id/viewSwipeAction"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingSwipeAction" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingPostCallScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_post_call"
                app:layout_constraintTop_toBottomOf="@id/viewSwipeAction"
                android:background="?android:selectableItemBackground"
                app:showSwitch="true"
                app:subtitleText="@string/show_call_screen_after_call"
                app:titleText="@string/post_call_screen" />

            <View
                android:id="@+id/viewPostCallScreen"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingPostCallScreen" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingDeliveryReports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_delivery"
                app:layout_constraintTop_toBottomOf="@id/viewPostCallScreen"
                android:background="?android:selectableItemBackground"
                app:showSwitch="true"
                app:titleText="@string/delivery_reports" />

            <View
                android:id="@+id/viewDeliveryReports"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingDeliveryReports" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingUse24Hr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_use_24_hr"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewDeliveryReports"
                app:showSwitch="true"
                app:titleText="@string/use_24_hour_time_format" />

            <View
                android:id="@+id/viewUse24Hr"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingUse24Hr" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingShowCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_show_count"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewUse24Hr"
                app:showSwitch="true"
                app:titleText="@string/show_character_counter_writing_messages" />

            <View
                android:id="@+id/viewShowCount"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingShowCount" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingRemoveAccents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_send_msg"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewShowCount"
                app:showSwitch="true"
                app:titleText="@string/remove_accents_diacritics_sending_messages" />

            <View
                android:id="@+id/viewRemoveAccents"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingRemoveAccents" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingShareApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_share"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewRemoveAccents"
                app:showSwitch="false"
                app:titleText="@string/share_app" />

            <View
                android:id="@+id/viewShareApp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingShareApp" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingRateUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_star"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewShareApp"
                app:showSwitch="false"
                app:titleText="@string/rate_us" />

            <View
                android:id="@+id/viewRateUs"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingRateUs" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_feedback"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewRateUs"
                app:showSwitch="false"
                app:titleText="@string/feedback" />

            <View
                android:id="@+id/viewFeedback"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@color/app_light_gray"
                app:layout_constraintTop_toBottomOf="@id/settingFeedback" />

            <com.messages.common.custom_views.CustomSettingsItemView
                android:id="@+id/settingPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconSrc="@drawable/ic_policy"
                android:background="?android:selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/viewFeedback"
                app:showSwitch="false"
                app:titleText="@string/privacy_policy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>